<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/buttonFirst"
            android:layout_width="107dp"
            android:layout_height="56dp"
            android:text="@string/say_hello"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="589dp" />

        <TextView
            android:id="@+id/textGreeting"
            android:layout_width="58dp"
            android:layout_height="19dp"
            android:text="@string/textview"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="146dp" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="229dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>